# qa-test-framework

./: .env.example  .flake8  .gitignore  .gitlab-ci.yml  .windows_setup_state.json  AGENTS.md  Jenkinsfile  KNOWN_BUGS.md  Makefile  PLAYWRIGHT_BIG_BANG_PLAN.md  README-DEV.md  README.md  TODO.md  backstop.config.js  backstop.komputronik_pl.config.js  bitbucket-pipelines.yml  conftest.py  failed.txt  openapi.json  opencode.json  package.json  pyproject.toml  pytest.ini  repo_map.json  requirements.txt  settings.py  settings_cli.py
.github/workflows/: ci-aso.yml  ci-frontend.yml  ci-lint.yml  ci-security.yml
.opencode/plugins/: agents-context-guard.js  e2e-anti-pattern-guard.js  python-venv-guard.js  repo-context-cache.js
aQuArius/: AGENT_GUIDELINES.md  ARCHITECTURE.md  CURRENT_PAYLOAD_AUDIT.md  EVENT_CONTRACT_V2.md  INGESTION_RULES.md  PLUGIN_MODEL.md  README.md  ROADMAP.md
backstop_data/ci_report/: xunit.xml
backstop_data/html_report/: config.js
config/: generate-config.js  generateConfig.js  urls.js
docs/: ARTIFACTS.md  CR_AUDIT_PROMPT.md  DEBUG_AGENTS.md  DEV_ENV_BOOTSTRAP_PLAN.md  E2E_PAGE_OBJECT_CONTRACT.md  FIXTURES.md  LOGGING_AUDIT.md  LOGGING_CHANGE_MATRIX.md  MARKER_TESTS_MATRIX.md  MARKER_TESTS_TREE.md  PAGE_OBJECTS.md  PAGE_OBJECTS_EN.md  PAGE_OBJECTS_PL.md  PMS_INTEGRATION.md  REPORTING_HTTP_INTEGRATION.md  REPO_TREE.html  SCENARIO_MODEL.md  VISUAL_BASELINE_APPROVAL_FLOW.md  VISUAL_REGRESION_TESTS_GUIDE.md  WINDOWS_SETUP_DLA_TESTERA.md  WINDOWS_SETUP_FOR_TESTER.md  visual-timeout-postmortem.md
docs/ai-agents/: README.md
framework/: __init__.py  artifacts.py  env.py  expect.py  git_info.py  log_levels.py  logger.py  polling.py  pytest_discovery_guard.py  reporting_client.py  screenshot_annotator.py  timeouts.py  timing_monitor.py  video_utils.py
framework/api/: __init__.py
framework/base/: __init__.py
framework/browser/: __init__.py  cookies.py  session.py
framework/plugins/: __init__.py  xdist_report_finalize.py
framework/reporting/: __init__.py  async_queue.py  client.py  http_sender.py  models.py  toggles.py
framework/targeting/: __init__.py  models.py  registry.py  resolver.py
framework/url_resolver/: __init__.py  url_resolver.py
framework/visual/: __init__.py  baseline_store.py  build_metadata.py  compare_pixel.py  models.py  package-lock.json  perceptual_client.py  report_builder.py  report_server.py  runner.py  scenario_loader.py  visual_suite.py
lib/: find-chrome.js  helpers.js  silence-browser-console.js
lib/engine-scripts/: disable-js.js  silence-browser-console.js
lib/system/: apply-filter-if-available.js  filter.js  find-chrome.js  generate-config.js  load-scenarios.js  make-timestamp-name.js  write-backstop-config.js
netQArner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
qa/: DeadCodeReviewPlan.md  PytestArchitecturePlan.md  __init__.py  conftest.py  scenario.py
qa/api/: __init__.py  conftest.py
qa/aso/: conftest.py
qa/auxiliary/: url_netcorner_b2b.py  url_netcorner_pl.py
qa/e2e/: __init__.py  conftest.py
qa/visual/: README.md  agent_manifest.md  conftest.py  validation_rules.json
tests/dktr/: config.json
tests/komputronik-pl/: config.json
tests/komputronik_pl/: config.json
tests/techrol_b2c/: config.json  home_page_suite.json
thoughts/plans/: e2e_performance_optimization.md  failed_dom_artifacts_implementation_plan.md  grid_auth_implementation_plan.md
thoughts/research/: 2026-04-27_e2e_performance_optimization.md  2026-04-27_failed_dom_artifacts.md  2026-05-13_grid_auth.md
thoughts/reviews/: failed_dom_artifacts_implementation-review.md  grid_auth_implementation_review.md
thoughts/selenium_migration/: admin_panel_ticket.md  migration_prompt.md  migration_todo.md  plan.md  research.md
thoughts/tickets/: debt_e2e_performance_optimization.md  feature_failed_dom_artifacts.md  feature_grid_auth.md
tools/: README.md  __init__.py
tools/ai_test_tools/: README.md  manual_trace_recorder.py  opencode.snippets.md
tools/allowed_software/: soft_list.txt
tools/artifacts/: cleanup.py
tools/benchmark/: benchmark.md  run_benchmark.sh
tools/dbeaver/: .gitignore  README.md  db_dump_config.example.json  db_dump_config.json  export_wizard_connections.py
tools/docs/: generate_repo_tree_html.py
tools/hooks/: install-local-hooks.ps1  install-local-hooks.sh  pre-commit-aso.sh
tools/jira/: check_add_comment.py  jira_api_data.py  performance_analyze.py
tools/logs/: .gitignore
tools/make/: make_help.py
tools/minio/: .env.example  README.md  docker-compose.yml
tools/wsl/: run.sh  (+4 more)
trash/: backstop_config_smoke-tests-config.json  backstop_config_smoke-tests-config_disabled_js.json
utils/: helpers.js
(+1084 files in other folders)
