[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netQArner"
version = "0.1.0"
description = "Playwright-first QA automation framework"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "ruff>=0.8.0",
  "mypy>=1.10.0",
  "bandit>=1.7.10",
  "pip-audit>=2.7.0",
  "pytest>=8.3.0",
  "pytest-xdist>=3.6.0",
  "playwright>=1.48.0",
  "loguru>=0.7.2",
  "requests>=2.32.0",
  "opencv-python>=4.10.0",
  "minio>=7.2.9",
]

[tool.setuptools]
packages = { find = { where = ["."], include = ["qa*", "framework*"], exclude = ["tools*", ".venv*", ".python*", ".tmp*"] } }

[tool.black]
line-length = 120
target-version = ["py311"]
include = "\\.pyi?$"
exclude = '''
/(
  .*legacy.*
)/
'''

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["**/*legacy*/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
exclude = '.*legacy.*'
