[build-system]
requires = ["setuptools>=68", "wheel", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "netQArner"
dynamic = ["version"]
description = "Playwright-first QA automation framework"
requires-python = ">=3.13.2,<3.14"

[tool.netqawner]
codename = "Łódź Bałuty"

[project.optional-dependencies]
dev = [
  "black>=26.3.1",
  "ruff>=0.8.0",
  "mypy>=1.10.0",
  "bandit>=1.7.10",
  "pip-audit>=2.7.0",
  "pygments>=2.20.0",
  "pytest>=8.3.0",
  "allure-pytest>=2.13.5",
  "pytest-html>=4.1.1",
  "pytest-xdist>=3.6.0",
  "playwright>=1.48.0",
  "loguru>=0.7.2",
  "requests>=2.33.0",
  "reportlab>=4.2.5",
  "opencv-python>=4.10.0",
  "minio>=7.2.9",
  "pyperclip>=1.9.0",
  "python-dotenv>=1.0.1",
]

[tool.setuptools]
packages = { find = { where = ["."], include = ["qa*", "framework*"], exclude = ["tools*", ".venv*", ".python*", ".tmp*"] } }

[tool.black]
line-length = 120
target-version = ["py313"]
include = "\\.pyi?$"
exclude = '''
/(
  .*legacy.*
)/
'''

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = ["**/*legacy*/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["E203", "E402"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
exclude = '.*legacy.*'
disable_error_code = [
    "import-untyped",
    "attr-defined",
    "no-any-return",
    "arg-type",
    "str-bytes-safe",
    "call-overload",
    "misc",
    "assignment",
]

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "node-and-date"
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"

[tool.bandit]
exclude = ["tests/", "**/test_*.py", "**/*_test.py", "qa/"]
skips = ["B101", "B105", "B106", "B110", "B112", "B404", "B603", "B607", "B311"]
